[package]
name = "rust-stdlib-showcase-docs"
version = "0.1.0"
edition = "2021"
authors = ["Rust Education Team"]
description = "Documentation for Rust Standard Library Showcase"
license = "MIT"
repository = "https://github.com/ioma8/rust-stdlib-showcase"
homepage = "https://ioma8.github.io/rust-stdlib-showcase/"

[lib]
name = "rust_stdlib_showcase_docs"
path = "src/lib.rs"

[dependencies]
# No external dependencies - pure Rust stdlib documentation